--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ a {
     z-index: 1;
     display: inline-block;
 }
+
 .course-btn::before {
     content: '';
     position: absolute;
@@ -117,6 +118,7 @@ a {
         transform: scale(1);
         opacity: 1;
     }
+
     100% {
         transform: scale(1.2, 1.5);
         opacity: 0;
@@ -384,6 +386,7 @@ a.more-btn {
     text-decoration: none;
     color: #000;
 }
+
 .service-card-link:hover {
     color: #DD0000;
 }
@@ -426,6 +429,7 @@ a.more-btn {
 /* Web Technologies Section */
 
 /* Our Portfolio Section */
+
 .portfolio-section {
     margin: 80px 0 120px 0;
 }
@@ -445,11 +449,6 @@ a.more-btn {
 @media screen and (max-width: 576px) {
     .nav-tabs {
         width: 100%;
-    }
-
-    .portfolio-view img {
-        width: 100%;
-        height: 500px;
     }
 }
 
@@ -1171,7 +1170,7 @@ a.more-btn {
     margin: 20px 0 10px 0;
 }
 
-.package-btn a{
+.package-btn a {
     position: relative;
     padding: 10px 35px;
     text-align: center;
@@ -1242,7 +1241,8 @@ a.more-btn {
     right: 0;
 }
 
-.package-list p img, .package-phycology p img {
+.package-list p img,
+.package-phycology p img {
     width: 20px;
     height: 15px;
     padding-left: 5px;
@@ -1340,7 +1340,8 @@ a.more-btn {
         padding: 30px;
     }
 
-    .package-list h3, .package-phycology h3 {
+    .package-list h3,
+    .package-phycology h3 {
         font-size: 1.4em;
     }
 
@@ -1456,6 +1457,7 @@ a.more-btn {
     .package-include-text {
         padding-bottom: 20px;
     }
+
     .package-include {
         position: relative;
         padding: 30px 0 100px 0;
@@ -1518,8 +1520,8 @@ a.more-btn {
     }
 
     .migration {
-    height: 650px;
-}
+        height: 650px;
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -1880,14 +1882,16 @@ a.more-btn {
         font-size: 2.5em;
         padding-bottom: 20px;
     }
-    
+
     .our-about-content .our-about-text {
         padding-top: 10px;
     }
 }
 
 @media screen and (max-width: 990px) {
-    .our-about-shape-top, .our-about-shape-bottom {
+
+    .our-about-shape-top,
+    .our-about-shape-bottom {
         display: none;
     }
 
@@ -1899,7 +1903,7 @@ a.more-btn {
         font-size: 2.1em;
         padding-bottom: 20px;
     }
-    
+
     .our-about-content .our-about-text {
         padding-top: 10px;
     }
@@ -2012,7 +2016,7 @@ a.more-btn {
     .teams-text h3 {
         font-size: 1.5em;
     }
-    
+
     .teams-text p {
         font-size: 1em;
     }
@@ -2262,7 +2266,7 @@ a.more-btn {
     .contact-hero-content p {
         padding-bottom: 10px;
         font-size: 1em;
-    } 
+    }
 }
 
 @media screen and (max-width: 990px) {
@@ -2297,7 +2301,7 @@ a.more-btn {
 .main-contact-form textarea:focus {
     border: 1px solid #DD0000 !important;
     box-shadow: none !important;
-    
+
 }
 
 .main-contact-form input:focus::-webkit-input-placeholder,
@@ -2677,6 +2681,8 @@ a.more-btn {
 .portfolio-card-list img {
     width: 100%;
     transition: 0.5s;
+    display: block;
+    margin: auto;
 }
 
 .portfolio-card-list p {
@@ -2754,7 +2760,44 @@ a.more-btn {
 }
 
 
+@media screen and (max-width: 1200px) {
+    .portfolio-card-tabs .nav-link {
+        padding: 6px 25px !important;
+        font-size: 0.9em !important;
+    }
 
+    .portfolio-card-list-btn a {
+        font-size: 1em;
+        padding: 8px 15px;
+    }
+}
+
+@media screen and (max-width: 990px) {
+    .portfolio-card-list {
+        padding: 35px;
+    }
+
+    .portfolio-cards-item {
+        margin-top: 0 !important;
+    }
+
+    #portfolio-card {
+        width: 100%;
+        background: #FEEAEA;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .portfolio-card-tabs .nav-link {
+        padding: 6px 35px !important;
+        font-size: 1em !important;
+        margin-top: 10px !important;
+    }
+
+    .portfolio-card-list {
+        padding: 25px;
+    }
+}
 
 
 
@@ -2775,9 +2818,3 @@ a.more-btn {
 
 
 /* Portfolio Card End */
-
-
-
-
-
-
