--- a/style.css
+++ b/style.css
@@ -1973,9 +1973,10 @@ a.more-btn {
 }
 
 .our-about-content p {
-    font-size: 1.1em;
+    font-size: 1em;
     color: #000;
-    font-weight: 500;
+    font-weight: 400;
+    line-height: 1.8;
     font-family: var(--header-font);
 }
 
@@ -1983,20 +1984,11 @@ a.more-btn {
     padding-top: 30px;
 }
 
-.our-about-content .our-about-text span {
-    color: #D00000;
-    font-weight: 700;
-}
-
 
 @media screen and (max-width: 1200px) {
     .our-about-content h1 {
         font-size: 2.5em;
         padding-bottom: 20px;
-    }
-
-    .our-about-content .our-about-text {
-        padding-top: 10px;
     }
 }
 
@@ -2014,10 +2006,6 @@ a.more-btn {
     .our-about-content h1 {
         font-size: 2.1em;
         padding-bottom: 20px;
-    }
-
-    .our-about-content .our-about-text {
-        padding-top: 10px;
     }
 }
 
